# world-cup-predictor

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: README.md  dashboard.py  streamlit_app.py
configs/: after_group_stage.yaml  after_quarter_finals.yaml  after_round_of_16.yaml  after_semi_finals.yaml  data.yaml  default.yaml  features.yaml  model.yaml  simulation.yaml
data/processed/: wc2026_seeding_example.csv
models/: README.md
notebooks/: 00_quickstart.ipynb  README.md
scripts/: download_data.py
src/wc2026/: __init__.py  cli.py  pipeline.py
src/wc2026/config/: schema.py
src/wc2026/data/: loaders.py  schema.py  validate_data.py
src/wc2026/evaluation/: metrics.py
src/wc2026/features/: elo.py  engineering.py  rolling_form.py  team_strength.py
src/wc2026/models/: calibrate.py  elo.py  goal_model.py  learned.py  predict.py  train.py
src/wc2026/reporting/: reports.py
src/wc2026/simulation/: bracket.py  simulator.py
src/wc2026/utils/: logging.py
src/world_cup_predictor/: __init__.py  cli.py  config.py
src/world_cup_predictor/data/: ingestion.py
src/world_cup_predictor/features/: engineering.py
src/world_cup_predictor/metrics/: xg.py
src/world_cup_predictor/models/: training.py
src/world_cup_predictor/pipeline/: prediction.py
src/world_cup_predictor/ratings/: elo.py
src/world_cup_predictor/reporting/: visualization.py
src/world_cup_predictor/simulation/: monte_carlo.py  poisson.py
src/worldcup_predictor/: __init__.py  cli.py
src/worldcup_predictor/app/: streamlit_app.py
src/worldcup_predictor/data/: loaders.py  preprocessing.py  schemas.py  validation.py
src/worldcup_predictor/features/: elo.py  feature_pipeline.py  group_stage.py  rolling.py  squad.py
src/worldcup_predictor/models/: baselines.py  calibration.py  evaluation.py  predict.py  train.py
src/worldcup_predictor/reporting/: plots.py  reports.py
src/worldcup_predictor/simulation/: knockout.py  match_simulator.py  probabilities.py  tournament.py
src/worldcup_predictor/utils/: config.py  logging.py
tests/: conftest.py  test_bracket.py  test_config.py  test_core.py  test_data_validation.py  test_elo.py  test_feature_leakage.py  test_historical_backtest.py  test_match_simulator.py  test_models.py  test_monte_carlo.py  test_poisson.py  test_simulation.py  test_xg.py
tests/fixtures/: piterfm_sample.csv
tests/fixtures/wc2026/: match_team_stats.csv  matches.csv  squads_and_players.csv  teams.csv  tournament_stages.csv  venues.csv
