[tool.poetry]
name = "world-cup-predictor"
version = "0.1.0"
description = "Production-ready World Cup knockout stage prediction project"
authors = ["kai-zim <kai-zim@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "world_cup_predictor", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.1.3"
scikit-learn = "^1.6.1"
xgboost = "^2.1.4"
lightgbm = "^4.6.0"
catboost = "^1.2.8"
streamlit = "^1.45.0"
mlflow = "^2.22.0"
pydantic = "^2.11.5"
pydantic-settings = "^2.9.1"
PyYAML = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
ruff = "^0.11.12"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
