[project]
name = "wc2026-predictor"
version = "0.1.0"
description = "Production-grade ML system for predicting the FIFA World Cup 2026 knockout stage via Elo, Poisson goal models and Monte-Carlo tournament simulation."
authors = [{ name = "Kai" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "catboost>=1.2",
    "scipy>=1.13",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "mlflow>=2.16",
    "plotly>=5.24",
    "streamlit>=1.39",
    "structlog>=24.4",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pandas-stubs",
    "types-PyYAML",
]

[project.scripts]
wc2026 = "wc2026.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wc2026"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=wc2026 --cov-report=term-missing"
pythonpath = ["src"]
