[project]
name = "worldcup-predictor"
version = "0.1.0"
description = "Machine-learning system for predicting the FIFA World Cup 2026 knockout stage"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "xgboost>=2.0",
  "lightgbm>=4.3",
  "scipy>=1.12",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "pandera>=0.19",
  "pyyaml>=6.0",
  "streamlit>=1.32",
  "plotly>=5.20",
  "requests>=2.31",
  "python-dotenv>=1.0",
  "click>=8.1",
  "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.9",
  "types-requests",
  "types-PyYAML",
]
kaggle = [
  "kagglehub>=0.2",
]

[project.scripts]
worldcup-predictor = "worldcup_predictor.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worldcup_predictor"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
